tests/paczka1/fuzzy1/58997468.err
Error in line 1: Ue8N6EJ7esc S62 34,6
Error in line 5: Ue8N6EJ7esc A719 5,7
Error in line 6: Ue8N6EJ7esc S894 8,1
Error in line 7: Ue8N6EJ7esc S62 13,0
Error in line 12: S894 S62 38,5
Error in line 14: S894 S894 71,0
Error in line 25: 2ZOj A719 170,4
Error in line 16: S894 A719 25,8
Error in line 26: 2ZOj S62 26,2
